[tool.poetry]
name = "ice-cream-store"
version = "0.1.0"
description = ""
authors = ["Roman <roman.korolev@teraki.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beanie = "^0.4.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
